766: Fix issue with contrast links on Primary Cert page

--- a/app/assets/stylesheets/components/pages/_secondary-teachers.scss
+++ b/app/assets/stylesheets/components/pages/_secondary-teachers.scss
@@ -2,9 +2,9 @@
   display: grid;
   grid-row-gap: 20px;
   grid-template-areas: "photo" "text";
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr auto;
   padding: 10px;
-  @include govuk-media-query($from: tablet) {
+  @include govuk-media-query($from: desktop) {
     grid-column-gap: 20px;
     grid-row-gap: 0;
     grid-template-areas: "text photo";
@@ -16,6 +16,22 @@
   &__block--text {
     grid-area: text;
     padding-top: 20px;
+    @include govuk-media-query($from: desktop) {
+      .govuk-heading-l {
+        font-size: 3.5vw;
+      }
+      .govuk-body-l {
+        font-size: 2vw;
+      }
+    }
+    @include govuk-media-query($from: 1000px) {
+      .govuk-heading-l {
+        font-size: 2.25rem;
+      }
+      .govuk-body-l {
+        font-size: 1.5rem;
+      }
+    }
   }
 
   &__block--photo {
